k8s/client-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: client-label
spec:
  replicas: 1  # Le nombre de répliques que vous souhaitez déployer
  selector:
    matchLabels:
      app: client-label
  template:
    metadata:
      labels:
        app: client-label
    spec:
      containers:
        - name: client-container
          image: client
          imagePullPolicy: Never
          ports:
          - containerPort: 3000
