k8s/moderation-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deployment
  labels:
    app: moderation-label
spec:
  replicas: 1  # Le nombre de répliques que vous souhaitez déployer
  selector:
    matchLabels:
      app: moderation-label
  template:
    metadata:
      labels:
        app: moderation-label
    spec:
      containers:
        - name: moderation-container
          image: moderation
          imagePullPolicy: Never
          ports:
            - containerPort: 4003
