k8s/query-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
  labels:
    app: query-label
spec:
  replicas: 1  # Le nombre de répliques que vous souhaitez déployer
  selector:
    matchLabels:
      app: query-label
  template:
    metadata:
      labels:
        app: query-label
    spec:
      containers:
        - name: query-label
          image: query
          imagePullPolicy: Never
          ports:
            - containerPort: 4002
