k8s/client-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  type: NodePort
  selector:
    app: client-label
  ports:
    - name: client-srv
      protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30011
