k8s/event-bus-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  type: NodePort
  selector:
    app: event-bus-label
  ports:
    - name: event-bus-srv
      protocol: TCP
      port: 4005
      targetPort: 4005
      nodePort: 30013
