k8s/moderation-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  type: NodePort
  selector:
    app: moderation-label
  ports:
    - name: moderation-srv
      protocol: TCP
      port: 4003
      targetPort: 4003
      nodePort: 30014
