k8s/posts-clusterip-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  type: NodePort
  selector:
    app: posts-label
  ports:
    - name: posts-clusterip-srv
      protocol: TCP
      port: 4000
      targetPort: 4000
      nodePort: 30015
