k8s/query-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  type: NodePort
  selector:
    app: query-label
  ports:
    - name: query-srv
      protocol: TCP
      port: 4002
      targetPort: 4002
      nodePort: 30016
