k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
  #  kubernetes.io/ingress.class: nginx
  #  nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: client-srv
            port:
              number: 3000
      - path: /posts/?(.*)/comments
        pathType: Prefix
        backend:
          service:
            name: comments-srv
            port:
              number: 4001
      - path: /posts/create
        pathType: Prefix
        backend:
          service:
            name: posts-clusterip-srv
            port:
              number: 4000
      - path: /posts
        pathType: Prefix
        backend:
          service:
            name: query-srv
            port:
              number: 4002
